force-app/main/default/objects/Auto_Update_Object__c/Auto_Update_Object__c.object-meta.xml
<CustomObject>
    <label>Auto_Update_Object</label>
    <nameField>
        <label>Auto_Update_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auto_Update_Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>