force-app/main/default/objects/Auto_Update_Object__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Case Status + Send Auto Email</fullName>
            </value>
            <value>
                <fullName>Query Update + Resolution Comment update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>