force-app/main/default/objects/Auto_Update_Object__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Auto_Update_Object</relationshipLabel>
    <relationshipName>Auto_Update_Object</relationshipName>
    <type>Lookup</type>
</CustomField>