force-app/main/default/objects/Auto_Update_Object__c/fields/MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>MobileNumber__c</fullName>
    <label>MobileNumber</label>
    <length>40</length>
    <type>Text</type>
</CustomField>