force-app/main/default/objects/Auto_Update_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>MobileNumber__c</columns>
    <columns>Action_Type__c</columns>
    <columns>AccountId__c</columns>
    <columns>Processed__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>